# simple-task-tracker

backend/: .gitignore  Makefile  README.md  pyproject.toml
backend/app/: .gitignore  Makefile  alembic.ini  app.py  flake8.cfg  linter-setup.cfg  pyproject.toml
backend/app/alembic/: env.py
backend/app/alembic/versions/: 1ec477b48c72_initial_migration.py
backend/app/app/: main.py
backend/app/app/api/: api.py
backend/app/app/api/api_v1/endpoints/: login.py  tasks.py  users.py
backend/app/app/core/: config.py  security.py
backend/app/app/crud/: __init__.py  crud_task.py  crud_user.py
backend/app/app/db/: base.py  base_class.py  session.py
backend/app/app/models/: item.py  task.py  user.py
backend/app/app/schemas/: __init__.py  task.py  user.py
backend/app/app/tests/: conftest.py
backend/app/app/tests/api_v1/: test_task.py  test_user.py
backend/app/app/tests/utils/: user.py
backend/app/crud/: __init__.py  crud.py  crud_item.py
backend/app/db/: base_class.py  sql_app.db
backend/app/models/: __init__.py  item.py
backend/app/schemas/: user.py
backend/app/snippets/: snippet.py
